tests/spec/non_conformant/errors/fn_error/property.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error/property.hrx"

// Ignoring "test", error tests are not supported yet.
